# pulsync

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: async_scheduler.rs  sync_scheduler.rs
pulsync-derive/: Cargo.toml
pulsync-derive/src/: lib.rs  salt.rs  task.rs
src/: error.rs  lib.rs  prelude.rs  recurrence.rs  scheduler.rs  task.rs  unique_id.rs
src/scheduler/: async_scheduler.rs  mod.rs  scheduler.rs  sync_scheduler.rs
src/task/: async_task.rs  mod.rs  sync_task.rs  task.rs
tests/: integration_tests.rs
