[package]
name = "pulsync"
version = "0.1.0"
edition = "2021"
authors = ["Ziale"]
repository = "https://github.com/ZialeHub/pulsync"
license-file = "LICENSE"
keywords = ["pulsync", "sync", "async", "scheduler", "task"]

[dependencies]
tracing = { version = "0.1.27", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["serde", "now"] }
tokio = { version = "1.42.0", default-features = false, features = ["rt", "time", "macros"], optional = true }
pulsync-derive = { path = "pulsync-derive" }

[features]
default = ["async"]
async = ["dep:tokio"]
sync = []
